# RustyMcPriceface

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.lock.backup  Cargo.toml  DATABASE_AGGREGATION_SUMMARY.md  Dockerfile  FIXES_SUMMARY.md  README.md  README_DOCKER.md  README_SHARED_SETUP.md  REFACTORING_SUMMARY.md  TROUBLESHOOTING.md  bot.py  bot_status.sh  build.sh  chart_service.py  database.py  docker-compose.yml  env.example  fix_cargo_lock.sh  monitor_bots.sh  price_service.py  pyproject.toml  query-db.sh  requirements.txt  restart_bot.sh  restart_bots.sh  setup_monitoring.sh  test_bot.rs  test_setup.sh
.cargo/: config.toml
.github/workflows/: ci.yml  test.yml
src/: bot.rs  charting.rs  config.rs  database.rs  database_tests.rs  db_cleanup.rs  db_query.rs  discord_api.rs  errors.rs  health.rs  health_server.rs  main.rs  price_service.rs  price_state.rs  shanghai_price_service.rs  utils.rs
