[package]
name = "pyth-sol-price-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "price-service"
path = "src/price_service.rs"

[[bin]]
name = "discord-bot"
path = "src/main.rs"

[[bin]]
name = "db-query"
path = "src/db_query.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Discord bot library
serenity = { version = "0.12", features = ["gateway", "http"] }

# SQLite database
rusqlite = { version = "0.30", features = ["bundled"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
