[package]
name = "pyth-sol-price-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "discord-bot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde", "clock"] }

# Discord bot library
serenity = { version = "0.12", features = ["gateway", "http"] }

# SQLite database
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Charting
plotters = "0.3"
image = "0.24"

# HTML/Regex parsing
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
